ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/tth_Booking_ReservationSettings__mdt.object-meta.xml
<CustomObject>
    <description>Various settings for the TTH Booking/Reservation functionality.  Includes settings for the following custom objects: Trip, Booking, Reservation</description>
    <label>tth_Booking/ReservationSettings</label>
    <pluralLabel>tth_Booking/ReservationSettings</pluralLabel>
</CustomObject>