ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/BaggageTriggersDisabled__c.field-meta.xml
<CustomField>
    <fullName>BaggageTriggersDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be used by all code for triggers on the Baggage object. Enables the ability to disable all via a setting.</description>
    <label>BaggageTriggersDisabled</label>
    <type>Checkbox</type>
</CustomField>