ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/Booking_Reference_Length__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_Length__c</fullName>
    <defaultValue>9</defaultValue>
    <label>Booking Reference Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>