ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/BookingTriggersDisabled__c.field-meta.xml
<CustomField>
    <fullName>BookingTriggersDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be used by APEX Triggers to check whether they should execute</description>
    <label>BookingTriggersDisabled</label>
    <type>Checkbox</type>
</CustomField>