ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/Generate_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Generate_Booking_Reference__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the Booking Reference field on the Booking custom object should be populated</description>
    <label>Generate Booking Reference</label>
    <type>Checkbox</type>
</CustomField>