ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/Generate_International_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Generate_International_Ticket_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the ticket number on the Reservation object be generated?</description>
    <label>Generate International Ticket Number</label>
    <type>Checkbox</type>
</CustomField>