ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/Generate_Record_Locator__c.field-meta.xml
<CustomField>
    <fullName>Generate_Record_Locator__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should the system auto generate a 6 digit Record Locator?</description>
    <label>Generate Record Locator</label>
    <type>Checkbox</type>
</CustomField>