ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/International_Airline_Number__c.field-meta.xml
<CustomField>
    <fullName>International_Airline_Number__c</fullName>
    <description>Used when generating the Ticket number on the Reservation object. See full list of airlines here: https://www2.arccorp.com/participatingcarriers/#/</description>
    <label>International Airline Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>