ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/InternationalTicketLength__c.field-meta.xml
<CustomField>
    <fullName>InternationalTicketLength__c</fullName>
    <defaultValue>10</defaultValue>
    <description>When generating the ticket number on the Reservation, how long should it be NOT including the International Airline Number</description>
    <label>InternationalTicketLength</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>