ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/PartyTriggersDisabled__c.field-meta.xml
<CustomField>
    <fullName>PartyTriggersDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be used by all code for triggers on the Party object. Enables the ability to disable all via a setting.</description>
    <label>PartyTriggersDisabled</label>
    <type>Checkbox</type>
</CustomField>