ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/Record_Locator_Length__c.field-meta.xml
<CustomField>
    <fullName>Record_Locator_Length__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Record Locator Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>