ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/TripTriggersDisabled__c.field-meta.xml
<CustomField>
    <fullName>TripTriggersDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be used by all code for triggers on the Trip object.  Enables the ability to disable all via a setting.</description>
    <label>TripTriggersDisabled</label>
    <type>Checkbox</type>
</CustomField>