ido-tth/main/default/objects/tth_Booking_ReservationSettings__mdt/fields/Use_Relative_Dates__c.field-meta.xml
<CustomField>
    <fullName>Use_Relative_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On the Trip and Booking objects, determine whether the travel dates are absolute or relative. If relative will leverage the &quot;Days ago&quot; custom field</description>
    <label>Use Relative Dates</label>
    <type>Checkbox</type>
</CustomField>